# awfixeros

.claude/: settings.json
.code/hooks/: pre-bash-zig-build.js
.cursor/: enviorment.json
.cursor/commands/: upgrade-nodejs.md
adblock-rust/: Cargo.toml
adblock-rust/.github/workflows/: codeql.yml
agents/: CENTRAL.md
agents/doc/sanity/: guides.md  plugins.md  recipes.md
agents/doc/sanity/docs/: docs.md  links.md
agents/doc/sanity/learn/: docs.md  links.md
agents/hooks/: post-edit-zig-format.js
agents/rules/: components.md
bun/test/: package.json
conf-editor/: Cargo.toml  README.md
conf-editor/.github/workflows/: codeql.yml
core/base/: README-modular-services.md  README.md  default.nix  release-combined.nix  release-small.nix  release.nix
core/base/lib/: default.nix  eval-cacheable-options.nix  eval-config-minimal.nix  eval-config.nix  make-channel.nix  make-disk-image.nix  make-ext4-fs.nix  make-iso9660-image.sh  make-multi-disk-zfs-image.nix  make-single-disk-zfs-image.nix  make-squashfs.nix  make-system-tarball.nix  systemd-lib.nix  systemd-unit-options.nix  testing-python.nix  utils.nix
core/base/modules/: module-list.nix  rename.nix
core/base/tests/: aesmd.nix  akkoma.nix  all-tests.nix  amazon-init-shell.nix  appliance-repart-image-verity-store.nix  appliance-repart-image.nix  armagetronad.nix  audit.nix  auth-mysql.nix  boot.nix  bootspec.nix  botamusique.nix  btrbk-section-order.nix  budgie.nix  caddy.nix  cassandra.nix  ceph-multi-node.nix  ceph-single-node-bluestore-dmcrypt.nix  ceph-single-node-bluestore.nix  ceph-single-node.nix  cgit.nix  chhoto-url.nix  chromium.nix  cinnamon-wayland.nix  cinnamon.nix  cloud-init.nix  cntr.nix  cockroachdb.nix  connman.nix  containers-bridge.nix  containers-ephemeral.nix  containers-extra_veth.nix  containers-imperative.nix  containers-ip.nix  containers-macvlans.nix  containers-names.nix  containers-nested.nix  containers-physical_interfaces.nix  containers-portforward.nix  containers-reloadable.nix  (+147 more)
core/modules/: README.md
core/modules/generic/: meta-maintainers.nix
de-ext/camera/: .gitignore  build.rs
de-ext/camera/.github/: PULL_REQUEST_TEMPLATE.md
de-ext/camera/resources/: io.github.cosmic_utils.camera.metainfo.xml
de-ext/camera/src/: bug_report.rs  terminal.rs
de-ext/camera/tests/: config_tests.rs  constants_tests.rs
de-ext/ctl/: CHANGELOG.md  Cargo.toml
de-ext/ctl/nix/: package.nix
de-ext/ctl/src/: interactive.rs
de-ext/ctl/src/commands/: build_theme.rs  mod.rs
generators/.github/workflows/: update-flake-lock.yml
lib-generators/src/: main.rs  revisions.rs
makes/docs/: pyproject.toml
module-manager/: Cargo.toml
module-manager/.github/workflows/: codeql.yml
modules/.github/workflows/: cache.yml  codeql.yml
nix-data-db/nixos-unstable/: nixpkgs.ver  nixpkgs_versions.db.br
nix-data-db/nixpkgs-unstable/: nixpkgs.ver  nixpkgs_versions.db.br
nix-data/.github/workflows/: codeql.yml
pass-store/: CHANGELOG.md
pass-store/.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
pass-store/.github/workflows/: copilot-setup-steps.yml
pass-store/docs/topics/: AutoType.adoc  DatabaseOperations.adoc  KeyboardShortcuts.adoc  Reference.adoc  UserInterface.adoc
pass-store/share/linux/: org.keepassxc.KeePassXC.appdata.xml
pass-store/share/translations/: keepassxc_en.ts
pass-store/share/windows/: wix-template.xml
pass-store/src/autotype/: AutoType.cpp  AutoTypeSelectDialog.cpp
pass-store/src/browser/: BrowserService.cpp
pass-store/src/core/: Config.cpp  Config.h  Entry.cpp  Entry.h
pass-store/src/gui/: DatabaseWidget.cpp  SearchWidget.cpp
pass-store/tests/: TestAutoType.cpp
pass-store/tests/gui/: TestGui.cpp
software-center/.github/workflows/: nightly.yml
software-center/src/ui/: window.rs
syncstorage-rs/syncstorage-spanner/: Cargo.toml
webkit/Tools/WebKitBot/: package-lock.json  package.json
(+801 files in other folders)
