[package]
name = "adblock"
version = "0.10.1"
authors = ["Anton Lazarev <alazarev@brave.com>", "Andrius Aucinas"]
edition = "2021"

description = "Native Rust module for Adblock Plus syntax (e.g. EasyList, EasyPrivacy) filter parsing and matching."
repository = "https://github.com/brave/adblock-rust/"
license = "MPL-2.0"
readme = "README.md"

exclude = [
    "*.md",
    ".github/",
    ".gitignore",
    ".npmignore",
    "data/",
    "examples/",
    "js/",
    "package-lock.json",
    "package.json",
    "tests/",
]

[dependencies]
addr = { version = "0.15", default-features = false, features = ["psl"], optional = true }
url = "2.5"
percent-encoding = "2.1"
once_cell = "1.21"
regex = "1.5"
bitflags = { version = "2.9.1", features = ["serde"] }
itertools = "0.14"
idna = "1.0.3"
serde = { workspace = true }
serde_json = { workspace = true }
seahash = "4.1.0"
memchr = "2.7"
base64 = "0.22"
rmp-serde = "1.3"
cssparser = { version = "0.35", optional = true }
selectors = { version = "0.30", optional = true }
thiserror = "2.0"
flatbuffers = { version = "25.2.10" }

[dev-dependencies]
criterion = "=0.7.0"
csv = "=1.3.1"
mock_instant = { version = "=0.6.0" }
# By default, reqwest builds openssl from source, which fails on missing/incompatible system dependencies
reqwest = { version = "=0.12.22", features = ["rustls-tls"], default-features = false }
futures = "=0.3.31"
tokio = { version = "=1.45.1", features = ["rt-multi-thread"] }
sha2 = "=0.10.9"

[lib]
bench = false

[[bench]]
name = "bench_regex"
harness = false

[[bench]]
name = "bench_matching"
harness = false

[[bench]]
name = "bench_url"
harness = false

[[bench]]
name = "bench_rules"
harness = false

[[bench]]
name = "bench_redirect_performance"
harness = false


[[bench]]
name = "bench_memory"
harness = false

[[bench]]
name = "bench_serialization"
harness = false

# Currently disabled, as cosmetic filter internals
# are no longer part of the crate's public API
#[[bench]]
#name = "bench_cosmetic_matching"
#harness = false

[features]
# If disabling default features, consider explicitly re-enabling the
# "embedded-domain-resolver" feature.
default = ["embedded-domain-resolver", "full-regex-handling", "unsync-regex-caching"]
full-regex-handling = []
unsync-regex-caching = [] # disables `Send` and `Sync` on `Engine`.
regex-debug-info = []
css-validation = ["cssparser", "selectors"]
content-blocking = []
embedded-domain-resolver = ["addr"] # Requires setting an external domain resolver if disabled.
resource-assembler = []

[lints.clippy]
len_zero = "allow"

[workspace]
members = ["js", "fuzz"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.141"
